--- a/Exercises/Graph/GAdjacentTF2.html
+++ b/Exercises/Graph/GAdjacentTF2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Graph FREE TREE TF 3</title>
+  <title>Graph Adjacent TF 1</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
@@ -13,15 +13,17 @@
     <div id="problem-type-or-description">
       <p class="problem">Answer TRUE or FALSE.</p>
       <p class="question">
-  A free tree is a connected graph with no cycles.</p>
+        Two vertices of a graph are ADJACENT if there
+	is an edge joining them.</p>
       <div class="solution"><var>"True"</var></div>
       <ul class="choices" data-category="true">
 	<li><var>"True"</var></li>
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-				<p>A free tree is a connected, undirected 
-          graph with no simple cycles </p>
+        <p>Neighboring verticies are adjacent to one another.</p>
+        <p>Two verticies are considered neighbors if there is an
+         edge connecting them.</p>
       </div>
     </div>
   </div>
