--- a/Exercises/Graph/GDAGTF.html
+++ b/Exercises/Graph/GDAGTF.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Graph Path TF 3</title>
+  <title> Graph Terms: DAG </title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
@@ -13,15 +13,15 @@
     <div id="problem-type-or-description">
       <p class="problem">Answer TRUE or FALSE.</p>
       <p class="question">
-  All vertices in a simple path must be unique.</p>
+        A DAG is a directed graph without cycles.</p>
       <div class="solution"><var>"True"</var></div>
       <ul class="choices" data-category="true">
-	<li><var>"True"</var></li>
-	<li><var>"False"</var></li>			  	  	 
+        <li><var>"True"</var></li>
+        <li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-				<p>A path is a simple path if all 
-        vertices on the path are distinct.</p>
+        <p>A DAG is a Directed Acyclic Graph.</p>
+        <p>An acyclic graph has no cycles.</p>
       </div>
     </div>
   </div>
