--- a/Exercises/Graph/GcompleteMCQ2.html
+++ b/Exercises/Graph/GcompleteMCQ2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Graph Term: Copmlete</title>
+  <title>Graph Terms: Complete</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
@@ -13,10 +13,10 @@
     <div id="problem-type-or-description">
       <p class="question">A graph containing all possible edges is a _____ graph</p>
       <div class="solution"><var>"complete"</var></div>
-	  <ul class="choices">
-  <li><var>"dense"</var></li>
-  <li><var>"sparse"</var></li>
-  <li><var>"directed"</var></li>
+      <ul class="choices" data-none="true">
+        <li><var>"dense"</var></li>
+        <li><var>"sparse"</var></li>
+        <li><var>"directed"</var></li>
       </ul>
       <div class="hints">
         <p>A dense graph is a graph with many edges.</p>
