--- a/Exercises/Graph/GcycleMCQ.html
+++ b/Exercises/Graph/GcycleMCQ.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title> Graph Digraph TF 2</title>
+  <title>Graph Terms: Cycles</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
@@ -11,17 +11,15 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="problem">Answer TRUE or FALSE.</p>
-      <p class="question">
-  A digraph is an undirected graph.</p>
-      <div class="solution"><var>"False"</var></div>
-      <ul class="choices" data-category="true">
-	<li><var>"True"</var></li>
-	<li><var>"False"</var></li>			  	  	 
+      <p class="question">A graph without cycles is called a/an:</p>
+      <div class="solution"><var>"acyclic graph"</var></div>
+      <ul class="choices" data-none="true">
+        <li><var>"undirected graph"</var></li>
+        <li><var>"simple graph"</var></li>
+        <li><var>"connected graph"</var></li>
       </ul>
       <div class="hints">
-				<p>A directed graph is also called a digraph.</p>
-        
+        <p>An acyclilc graph has no cycles.</p>
       </div>
     </div>
   </div>
