--- a/Exercises/Graph/GdegreeMCQ.html
+++ b/Exercises/Graph/GdegreeMCQ.html
@@ -1,7 +1,7 @@
 !DOCTYPE html>
 <html data-require="math">
 <head>
-  <title> Graph Terms 4 </title>
+  <title> Graph Terms: Degree </title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
@@ -13,15 +13,18 @@
     <div id="problem-type-or-description">
       <p class="problem">Answer TRUE or FALSE.</p>
       <p class="question">
-  All graphs must have edges.</p>
-      <div class="solution"><var>"False"</var></div>
-      <ul class="choices" data-category="true">
-	<li><var>"True"</var></li>
-	<li><var>"False"</var></li>			  	  	 
+        The number of edges incident to that vertex called its:
+      <div class="solution"><var>"degree"</var></div>
+      <ul class="choices" data-none="true">
+        <li><var>"count"</var></li>
+        <li><var>"number"</var></li>
+        <li><var>"size"</var></li>
       </ul>
       <div class="hints">
-				<p>A graph is a set of edges and vertcies.</p>
-        <p>The set of edges may be empty.</p>
+        <p>An edge connecting verticies is said 
+          to be incident.</p>
+        <p>The degree of a vertex is the number
+          of graph edges it touches.</p>
       </div>
     </div>
   </div>
