--- a/Exercises/Graph/GedgesTF.html
+++ b/Exercises/Graph/GedgesTF.html
@@ -1,7 +1,7 @@
 !DOCTYPE html>
 <html data-require="math">
 <head>
-  <title> Graph Clique 1 </title>
+  <title> Graph Terms: Edges </title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
@@ -12,18 +12,15 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="problem">Answer TRUE or FALSE.</p>
-      <p class="question">
-  Any subset of V where all vertices in the subset 
-  connect to all other vertices in the subset is called a clique.</p>
-      <div class="solution"><var>"True"</var></div>
+      <p class="question">All graphs must have edges.</p>
+      <div class="solution"><var>"False"</var></div>
       <ul class="choices" data-category="true">
 	<li><var>"True"</var></li>
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-				<p>A clique is a subset of the graph where all the verticies in 
-          the subgraph connect to the other verticies </p>
-       
+        <p>A graph is a set of edges and vertcies.</p>
+        <p>The set of edges may be empty.</p>
       </div>
     </div>
   </div>
