--- a/Exercises/Graph/GfreeMCQ.html
+++ b/Exercises/Graph/GfreeMCQ.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title> Graph Digraph TF 1</title>
+  <title>Graph FREE TREE TF 1</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
@@ -11,16 +11,15 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="problem">Answer TRUE or FALSE.</p>
-      <p class="question">
-  A digraph is a directed graph.</p>
-      <div class="solution"><var>"True"</var></div>
-      <ul class="choices" data-category="true">
-	<li><var>"True"</var></li>
-	<li><var>"False"</var></li>			  	  	 
+      <p class="question">A free tree is:</p>
+      <div class="solution"><var>"a connected graph with no cycles"</var></div>
+      <ul class="choices">
+	<li><var>"a connected graph with only simple cycles"</var></li>
+	<li><var>"an unconnected graph with no cycles"</var></li>
       </ul>
       <div class="hints">
-				<p>A directed graph is also called a digraph.</p>
+        <p>A free tree is a connected, undirected graph with no
+          cycles.</p>
       </div>
     </div>
   </div>
