--- a/Exercises/Graph/GvertDegreeMCQ.html
+++ b/Exercises/Graph/GvertDegreeMCQ.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Predecessor TF 1</title>
+  <title>Graph Vertex Degree</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../JSAV/lib/jquery.transit.js"></script>
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
   <style>
     .jsavcontainer {
-      height: 300px;
+      height: 250px;
     }
   </style>
 </head>
@@ -22,35 +22,45 @@
 var initJSAV = function () {
   var jsav = new JSAV("jsav");
   jsav.recorded();
-  var g = jsav.ds.graph({center: true, visible: true, height: 300, directed: true});
+  var g = jsav.ds.graph({center: true, visible: true, height: 250});
+  var n0 = g.addNode("0", {top: 0, left: 100});
+  var n1 = g.addNode("1", {top: 90, left: 5});
+  var n2 = g.addNode("2", {top: 30, left: 200});
+  var n3 = g.addNode("3", {top: 140, left: 200});
+  var n4 = g.addNode("4", {top: 190, left: 100});
 
-  var n1 = g.addNode("1", {top: 100, left: 50});
-  var n2 = g.addNode("2", {top: 100, left: 150});
+  g.addEdge(n0, n1);
+  g.addEdge(n0, n2);
   g.addEdge(n1, n2);
+  g.addEdge(n1, n3);
+  g.addEdge(n1, n4);
+  g.addEdge(n2, n4);
+  g.addEdge(n3, n4);
   g.layout();
+}
+
+function getAnswer(node){
+  var a = [2, 4, 3, 2, 3];
+  return a[node];
 }
 </script> 
 
 <div class="exercise">
   <div class="vars">
     <var id="JSAV">initJSAV()</var>
+    <var id="node">randRange(0, 4)</var>
+    <var id="ANS">getAnswer(node)</var>
   </div>
-
   <div class="problems">
-
-    <div id="problem-type-or-description-1">
-      <p class="problem"> 
+    <div id="problem-type-or-description-2">
+      <p class="problem">
         <div id="jsav" class="jsavcanvas"></div>
       </p>
-      <p class="question">
-  Node one is the predecessor of node two.</p>
-      <div class="solution"><var>"True"</var></div>
-      <ul class="choices" data-category="true">
-  <li><var>"True"</var></li>
-  <li><var>"False"</var></li>              
-      </ul>
+      <p class="question">What it the degree of vertex <var>node</var>?</p>
+      <p class="solution" data-type="text"><var>ANS</var></p>
       <div class="hints">
-        <p>Add hint.</p>
+        <p>The degree of a vertex is the number of edges that the vertex touches.</p>
+        <p>Vertex <var>node</var> has a degree of <var>ANS</var>.</p>
       </div>
     </div>
   </div>
