--- a/Exercises/Graph/GweightTF.html
+++ b/Exercises/Graph/GweightTF.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Graph Adjacent TF 2</title>
+  <title> Graph Terms: Weighted </title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
@@ -13,16 +13,17 @@
     <div id="problem-type-or-description">
       <p class="problem">Answer TRUE or FALSE.</p>
       <p class="question">
-  Two vertices are neighbors if they are not adjacent.</p>
+  A weighted graph must have edge weights and 
+  be directed</p>
       <div class="solution"><var>"False"</var></div>
       <ul class="choices" data-category="true">
 	<li><var>"True"</var></li>
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-				<p>Two verticies are consider neighbors if there is an
-         edge connecting them.</p>
-         <p>Neighboring verticies are adjacent to one another.</p>
+        <p>A weighted graph can be a directed or
+          undirected graph.</p>
+        <p>A weighted graph must have edge weights.</p>
       </div>
     </div>
   </div>
