--- a/Exercises/Graph/GConnCompTF.html
+++ b/Exercises/Graph/GConnCompTF.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Adjacent TF 1 </title>
+  <title>Connected Components</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../JSAV/lib/jquery.transit.js"></script>
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
   <style>
     .jsavcontainer {
-      height: 300px;
+      height: 200px;
     }
   </style>
 </head>
@@ -23,31 +23,29 @@ var initJSAV = function () {
   var jsav = new JSAV("jsav");
   jsav.recorded();
 
-  var gTop = 10; 
+  var gTop = 0; 
   var gLeft = 150;
 
-  var graph = jsav.ds.graph({center: true, visible: true, height: 300, directed: true});
+  var graph = jsav.ds.graph({center: true, visible: true, height: 200, directed: true});
 
-  var nodeOne = graph.addNode("0", {left: gLeft, top: gTop});
-  var nodeTwo = graph.addNode("2", {left: gLeft + 100, top: gTop});
-  var nodeThree = graph.addNode("4", {left: gLeft + 50, top: gTop + 50});
-  var nodeFour = graph.addNode("1", {left: gLeft,  top: gTop + 100});
-  var nodeFive =graph.addNode("3", {left: gLeft + 100, top: gTop + 100});
-  var nodeSix = graph.addNode("6" , {left: gLeft + 175, top: gTop});
-  var nodeSeven = graph.addNode("5", {left: gLeft + 175, top: gTop + 100});
-  var nodeEight = graph.addNode("7", {left: gLeft + 250, top: gTop});
+  var node0 = graph.addNode("0", {left: gLeft, top: gTop});
+  var node1 = graph.addNode("1", {left: gLeft,  top: gTop + 100});
+  var node2 = graph.addNode("2", {left: gLeft + 100, top: gTop});
+  var node3 = graph.addNode("3", {left: gLeft + 100, top: gTop + 100});
+  var node4 = graph.addNode("4", {left: gLeft + 50, top: gTop + 50});
+  var node5 = graph.addNode("5", {left: gLeft + 175, top: gTop + 100});
+  var node6 = graph.addNode("6", {left: gLeft + 175, top: gTop});
+  var node7 = graph.addNode("7", {left: gLeft + 250, top: gTop});
 
   //add edges to grapph 
-  graph.addEdge(nodeOne, nodeFour);
-  graph.addEdge(nodeOne, nodeThree);
-  graph.addEdge(nodeTwo, nodeThree);
-  graph.addEdge(nodeTwo, nodeFive);
-  graph.addEdge(nodeFour, nodeFive);
-  graph.addEdge(nodeThree, nodeFour);
-  graph.addEdge(nodeSix, nodeSeven);
-
+  graph.addEdge(node0, node1);
+  graph.addEdge(node0, node4);
+  graph.addEdge(node1, node3);
+  graph.addEdge(node2, node3);
+  graph.addEdge(node2, node4);
+  graph.addEdge(node4, node1);
+  graph.addEdge(node6, node5);
   graph.layout();
-
 }
 </script> 
 
@@ -57,19 +55,18 @@ var initJSAV = function () {
   </div>
 
   <div class="problems">
-
     <div id="problem-type-or-description-1">
       <p class="problem"> 
         <div id="jsav" class="jsavcanvas"></div>
       </p>
       <p class="question">
-  How many connected components does this graph have.</p>
+        How many connected components does this graph have?</p>
       <div class="solution"><var>"3"</var></div>
       <ul class="choices">
-  <li><var>"1"</var></li>
-  <li><var>"2"</var></li>     
-  <li><var>"4"</var></li>
-  <li><var>"undetermined"</var></li>             
+        <li><var>"1"</var></li>
+        <li><var>"2"</var></li>     
+        <li><var>"4"</var></li>
+        <li><var>"undetermined"</var></li>             
       </ul>
       <div class="hints">
         <p>The maximally connected subgraphs of an undirected graph are called connected components.</p>
