--- a/Exercises/Graph/GcompleteMCQ.html
+++ b/Exercises/Graph/GcompleteMCQ.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title> Graph Complete 2</title>
+  <title> Graph Complete 1 </title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
@@ -11,21 +11,21 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="problem">Answer TRUE or FALSE.</p>
       <p class="question">
-  A complete graph is a clique of size |V|.</p>
-      <div class="solution"><var>"True"</var></div>
-      <ul class="choices" data-category="true">
-	<li><var>"True"</var></li>
-	<li><var>"False"</var></li>			  	  	 
+        A complete graph is a clique of size:</p>
+      <div class="solution"><var>"|V|"</var></div>
+      <ul class="choices" data-none="true">
+	<li><var>"|E|"</var></li>
+	<li><var>"|n|"</var></li>
+	<li><var>"n"</var></li>
       </ul>
       <div class="hints">
-				<p>A graph containing all possible edges 
+        <p>A graph containing all possible edges 
           is said to be a complete graph</p>
         <p>Any subset of V where all vertices in the 
           subset connect to all other vertices in the 
           subset is called a clique</p>
-        
+        <p>A complete graph is a clique of size |V|.</p>
       </div>
     </div>
   </div>
