--- a/Exercises/Graph/GdigraphMCQ.html
+++ b/Exercises/Graph/GdigraphMCQ.html
@@ -1,7 +1,7 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title> Graph Terms 1 </title>
+  <title> Graph Digraph TF 1</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
@@ -11,19 +11,16 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="problem">Answer TRUE or FALSE.</p>
-      <p class="question">
-  A complete graph is a simple graph with every
-  pair of vertices joined by an edge.</p>
+      <p class="question">A digraph is a:</p>
       <div class="solution"><var>"True"</var></div>
-      <ul class="choices" data-category="true">
-	<li><var>"True"</var></li>
-	<li><var>"False"</var></li>			  	  	 
+      <div class="solution"><var>"directed graph"</var></div>
+      <ul class="choices" data-none="true">
+	<li><var>"undirected graph"</var></li>
+	<li><var>"connected component"</var></li>			  	  	 
+	<li><var>"DAG"</var></li>			  	  	 
       </ul>
       <div class="hints">
-				<p>A graph containing all possible edges is 
-          said to be a complete graph.</p>
-
+        <p>A directed graph is also called a digraph.</p>
       </div>
     </div>
   </div>
