--- a/Exercises/Graph/GneighborTF.html
+++ b/Exercises/Graph/GneighborTF.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title> Graph Complete 1 </title>
+  <title>Graph Adjacent TF 2</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
@@ -13,19 +13,16 @@
     <div id="problem-type-or-description">
       <p class="problem">Answer TRUE or FALSE.</p>
       <p class="question">
-  A complete graph is a clique of size |E|.</p>
+        Two vertices can be adjacent even if they are not neighbors.</p>
       <div class="solution"><var>"False"</var></div>
       <ul class="choices" data-category="true">
 	<li><var>"True"</var></li>
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-				<p>A graph containing all possible edges 
-          is said to be a complete graph</p>
-        <p>Any subset of V where all vertices in the 
-          subset connect to all other vertices in the 
-          subset is called a clique</p>
-          <p>A complete graph is a clique of size |V|.</p>
+         <p>Two verticies are consider neighbors if there is an
+           edge connecting them.</p>
+         <p>Neighboring verticies are adjacent to one another.</p>
       </div>
     </div>
   </div>
