Consistent indentation in Tracing exs

--- a/Exercises/RecurTutor/rectFIB2rc18.html
+++ b/Exercises/RecurTutor/rectFIB2rc18.html
@@ -48,14 +48,12 @@ function checkAnswer(answer ,i) {
       <p class="question"> 
       Consider the following code::
      <textarea id="codeTextarea" >	
- void asterisksPrinter(int i)
-{	
-   if (i > 1)
+void asterisksPrinter(int i) {	
+  if (i > 1)
   {
    asterisksPrinter(i / 2);	
    asterisksPrinter(i / 2);	
   }	
-  
   System.out.print( "*" );
 }
 	</textarea>
