--- a/Exercises/RecurTutor/rectFIB2rc5.html
+++ b/Exercises/RecurTutor/rectFIB2rc5.html
@@ -23,15 +23,13 @@
  
 <body  data-height="800" data-width="950">
 <script>
-function f(k , n)
-{
+function f(k , n){
  if(n==k)
    return k;
-  else
-    if(n > k)
-      return f(k, n-k);
-  else
-      return f(k-n, n);
+ else if(n > k)
+     return f(k, n-k);
+ else
+     return f(k-n, n);
 }
 
 function checkAnswer(answer , k , n) {
@@ -53,12 +51,10 @@ function checkAnswer(answer , k , n) {
       <p class="question">     
       Consider the following function:
       <textarea id="codeTextarea" >	 		
- public int f(int k , int n)
-{
+public int f(int k , int n) {
   if(n==k)
-   return k;
-  else
-   if(n > k)
+    return k;
+  else if(n > k)
     return f(k, n-k);
   else
     return f(k-n, n);
