--- a/Exercises/Development/GraphSpaceReqSum.html
+++ b/Exercises/Development/GraphSpaceReqSum.html
@@ -8,7 +8,7 @@
 </head>
 
 <body data-height="650" data-width="950">
-	<div class="exercise" data-name="GraphSpaceReq1"></div>
+	<div class="exercise" data-name="GSpaceReqMatrix"></div>
 	<div class="exercise" data-name="GraphSpaceReq2"></div>
 	<div class="exercise" data-name="GraphSpaceRec3"></div>
 
