Updates to graph questions

--- a/Exercises/Graph/GAdjacentMCQ.html
+++ b/Exercises/Graph/GAdjacentMCQ.html
@@ -20,9 +20,9 @@
         <li><var>"Q and K are isolated"<var></li>
       </ul>
       <div class="hints">
-        <p>An edge connecting two verticies is incident 
-          on these verticies.</p>
-        <p>Two verticies connected by an edge are adjacent.</p>
+        <p>An edge connecting two vertices is incident 
+          on these vertices.</p>
+        <p>Two vertices connected by an edge are adjacent.</p>
       </div>
     </div>
   </div>
