--- a/Exercises/Graph/GAdjacentTF2.html
+++ b/Exercises/Graph/GAdjacentTF2.html
@@ -21,8 +21,8 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-        <p>Neighboring verticies are adjacent to one another.</p>
-        <p>Two verticies are considered neighbors if there is an
+        <p>Neighboring vertices are adjacent to one another.</p>
+        <p>Two vertices are considered neighbors if there is an
          edge connecting them.</p>
       </div>
     </div>
