--- a/Exercises/Graph/GConnCompTF.html
+++ b/Exercises/Graph/GConnCompTF.html
@@ -70,7 +70,7 @@ var initJSAV = function () {
       </ul>
       <div class="hints">
         <p>The maximally connected subgraphs of an undirected graph are called connected components.</p>
-        <p> Verticies 0, 1, 2, 3, and 4 form one connnected component</p>
+        <p> Vertices 0, 1, 2, 3, and 4 form one connnected component</p>
       </div>
     </div>
   </div>
