--- a/Exercises/Graph/GcliqueMCQ.html
+++ b/Exercises/Graph/GcliqueMCQ.html
@@ -21,7 +21,7 @@
 	<li><var>"DAG"</var></li>
       </ul>
       <div class="hints">
-	<p>A clique is a subset of the graph where all the verticies in 
+	<p>A clique is a subset of the graph where all the vertices in 
           the subgraph connect to the other vertices.</p>
        </div>
     </div>
