--- a/Exercises/Graph/GdegreeMCQ.html
+++ b/Exercises/Graph/GdegreeMCQ.html
@@ -21,7 +21,7 @@
         <li><var>"size"</var></li>
       </ul>
       <div class="hints">
-        <p>An edge connecting verticies is said 
+        <p>An edge connecting vertices is said 
           to be incident.</p>
         <p>The degree of a vertex is the number
           of graph edges it touches.</p>
