--- a/Exercises/Graph/GraphIntroSumm.html
+++ b/Exercises/Graph/GraphIntroSumm.html
@@ -13,7 +13,7 @@
 </head>
 
 <body data-height="650" data-width="950">
-  <div class="exercise" data-name="GVertDegreeMCQ"></div>
+  <div class="exercise" data-name="GvertDegreeMCQ"></div>
   <div class="exercise" data-name="GAdjacentTF1"></div>
   <div class="exercise" data-name="GAdjacentTF2"></div>
   <div class="exercise" data-name="GConnCompTF"></div>
