--- a/Exercises/Graph/GsimpcycleMCQ.html
+++ b/Exercises/Graph/GsimpcycleMCQ.html
@@ -17,7 +17,7 @@
       <ul class="choices" data-none="true">
         <li><var>"allows repetition of vertices so long as the length of the path is less than 5"</var></li>
         <li><var>"allows repetition of vertices so long as no edge is repeated"</var></li>
-        <li><var>"must have all verticies be unique"</var></li>
+        <li><var>"must have all vertices be unique"</var></li>
       </ul>
       <div class="hints">
         <p>A cyle is simple if all vertices on the cycle are distinct,
