--- a/Exercises/Graph/GneighborTF.html
+++ b/Exercises/Graph/GneighborTF.html
@@ -20,9 +20,9 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-         <p>Two verticies are consider neighbors if there is an
+         <p>Two vertices are consider neighbors if there is an
            edge connecting them.</p>
-         <p>Neighboring verticies are adjacent to one another.</p>
+         <p>Neighboring vertices are adjacent to one another.</p>
       </div>
     </div>
   </div>
