--- a/Exercises/Graph/GsimppathMCQ.html
+++ b/Exercises/Graph/GsimppathMCQ.html
@@ -13,7 +13,7 @@
     <div id="problem-type-or-description">
       <p class="question">A simple path:</p>
 
-      <div class="solution"><var>"must have all verticies be unique"</var></div>
+      <div class="solution"><var>"must have all vertices be unique"</var></div>
       <ul class="choices" data-none="true">
 	<li><var>"allows repetition of vertices so long as the length of the path is less than 5"</var></li>
 	<li><var>"allows repetition of vertices so long as no edge is repeated"</var></li>
