--- a/Exercises/Graph/GspaceMDU.html
+++ b/Exercises/Graph/GspaceMDU.html
@@ -1,49 +1,44 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Adjaceny List Space Calculation</title>
+  <title>Adjaceny Matrix Space Calculation: Directed, Unweighted</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
 
 <script>
-function genAnswer(numV, pointBytes, numE, edgeBytes) {
-  space = (numV * pointBytes) + (numE * edgeBytes)
+function genAnswer(numV, vertBytes) {
+  var space = numV * numV * vertBytes 
   return space
-}
-</script>
-
-<script>
-function V(numV){
-	return numV
 }
 </script>
 
 <div class="exercise">
   <div class="vars">
     <var id="numV">randRange(6, 10)</var>
-    <var id ="numE">randRange(V(numV), (V(numV)* (V(numV) - 1))/2 )</var>
-    <!--<var id="numE">randRange(numV, (numV * (numV -1))/2</var>-->
+    <var id ="numE">randRange(numV, (numV * (numV - 1))/2)</var>
     <var id="pointerB">randRange(4,6)</var>
-    <var id="edgeB">randRange(2,4)</var>
+    <var id="edgeB">1</var>
     <var id="vertB">randRange(2,4)</var>
-    <var id="ANS">genAnswer(numV, pointerB, numE, edgeB)</var>
+    <var id="ANS">genAnswer(numV, edgeB)</var>
   </div>
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="problem">WARNING! Read the conditions for the problems
-	in this set very carefully!
+        in this set very carefully!
       </p>
       <p class="question">Assume for a directed graph with <var>numV</var>
-         verticies and <var>numE</var> edges that a vertex index requires
-         <var>vertB</var> bytes, a pointer requires <var>pointerB</var>
-         bytes, and that edge weights require <var>edgeB</var> bytes. 
+         vertices and <var>numE</var> edges that a vertex index requires
+         <var>vertB</var> bytes, and a pointer requires <var>pointerB</var>
+         bytes.
+         The graph is unweighted, so assume that each matrix
+         element stores one byte to represent the edge.
          Calculate the byte requirements for an adjacency matrix. 
       </p>
       <p class="solution" data-type="text"><var>ANS</var></p>
       <div class="hints">
-         <p> V * pointer + E * (vertex_index + edge_weight bytes + pointer) = <var>ANS</var></p>
+        <p> V^2 * 1 bytes = <var>ANS</var></p>
       </div> 
     </div>
   </div>
