ListExerciseOpen is not quite done yet

--- a/Exercises/PL/ListExerciseOpen.html
+++ b/Exercises/PL/ListExerciseOpen.html
@@ -94,8 +94,11 @@
 	</div>
 	<div class="problems">
 		<div>
-		  <div class="question"><p><var>setupText</var> is the value of the following 
-		      expression?</p>
+		  <div class="question"><p><var>setupText</var> is the
+		      value of the following expression? Note: If the
+		      evaluation of the expression throws an exception,
+		      the correct answer is the single word  (in
+		      all lowercase letters): error</p>
 		    <div id="jsav"></div>
 		  </div>
 		  <div class="solution" data-type="regex">
