--- a/Exercises/RecurTutor/recTracingSumm4.html
+++ b/Exercises/RecurTutor/recTracingSumm4.html
@@ -13,7 +13,7 @@
 </head>
 
 <body  data-height="550" data-width="950">
-  <div class="exercise" data-name="rectFIBir7"></div>
-  <div class="exercise" data-name="rectFIBir12"></div>
+  <div class="exercise" data-name="rectFIBmystryab"></div>
+  <div class="exercise" data-name="rectFIBfuncxy"></div>
 </body>
 </html>
