--- a/Exercises/RecurTutor/recTracingSumm5.html
+++ b/Exercises/RecurTutor/recTracingSumm5.html
@@ -14,7 +14,7 @@
 </head>
 
 <body  data-height="650" data-width="950">
-  <div class="exercise" data-name="rectMCQbwd9"></div>
-  <div class="exercise" data-name="rectMCQbwd6"></div>
+  <div class="exercise" data-name="rectMCQprntstrng"></div>
+  <div class="exercise" data-name="rectMCQfnctnxn"></div>
 </body>
 </html>
