--- a/Exercises/RecurTutor/recTracingSumm2.html
+++ b/Exercises/RecurTutor/recTracingSumm2.html
@@ -13,7 +13,7 @@
 </head>
 
 <body  data-height="550" data-width="950">
-  <div class="exercise" data-name="rectMCQresrc2"></div>
-  <div class="exercise" data-name="rectMCQmrc15"></div>
+  <div class="exercise" data-name="rectFIBrsltn"></div>
+  <div class="exercise" data-name="rectMCQfoox"></div>
 </body>
 </html>
