--- a/Exercises/RecurTutor/recTracingSumm3.html
+++ b/Exercises/RecurTutor/recTracingSumm3.html
@@ -14,8 +14,8 @@
 </head>
 
 <body  data-height="850" data-width="950">
-  <div class="exercise" data-name="rectMCQfwder14"></div>
-  <div class="exercise" data-name="rectMCQerr20"></div>
-  <div class="exercise" data-name="rectMCQerrfx21"></div>
+  <div class="exercise" data-name="rectMCQstrngrecur"></div>
+  <div class="exercise" data-name="rectMCQwrtwthcmms"></div>
+  <div class="exercise" data-name="rectMCQwrtwthcmmserrfx"></div> 
 </body>
 </html>
