--- a/Exercises/RecurTutor/recTracingSumm6.html
+++ b/Exercises/RecurTutor/recTracingSumm6.html
@@ -13,8 +13,8 @@
 </head>
 
 <body  data-height="750" data-width="950">
-  <div class="exercise" data-name="rectMCQbc16"></div>
-  <div class="exercise" data-name="rectFIBfwd13"></div>
-  <div class="exercise" data-name="rectMCQrc17"></div>
+  <div class="exercise" data-name="rectMCQsprwrtvrtcl"></div>
+  <div class="exercise" data-name="rectFIBmystrynumb"></div>
+  <div class="exercise" data-name="rectMCQsprwrtvrtclcls"></div>
 </body>
 </html>
