--- a/Exercises/RecurTutor/rectFIBdosmthng5f.html
+++ b/Exercises/RecurTutor/rectFIBdosmthng5f.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title> Recursion Tracing Exercise: Two Recursive Calls</title>
+  <title> Recursion Tracing Exercise:dosomething Print</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
+  
   
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
@@ -16,24 +17,16 @@
     mode:  "text/x-java"
   });
   </script> 
-  <style> 
-   #problemarea { height: 800px;}
-  </style>
+ 
 </head>
  
-<body  data-height="800" data-width="950">
+<body  data-height="550" data-width="950">
 <script>
-function f(k , n){
- if(n==k)
-   return k;
- else if(n > k)
-     return f(k, n-k);
- else
-     return f(k-n, n);
-}
 
-function checkAnswer(answer , k , n) {
-  if ( answer == f(k , n)) {
+
+function checkAnswer(answer) {
+  
+  if ( answer == 54321) {
     return true;
   } else {
     return false;
@@ -42,38 +35,30 @@ function checkAnswer(answer , k , n) {
 </script>
   
 <div class="exercise">
-<div class="vars" data-ensure="k != n">
-    <var id="k">randRange(1, 10)</var>
-    <var id="n">randRange(1, 10)</var>
+<div class="vars">
+    <var id="n">randRange(2, 10)</var>
   </div>
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question">     
       Consider the following function:
-      <textarea id="codeTextarea" >	 		
-public int f(int k , int n) {
-  if(n==k)
-    return k;
-  else if(n > k)
-    return f(k, n-k);
-  else
-    return f(k-n, n);
- }
-      </textarea>		
-     What value is returned by the call f(<var>k</var>,<var>n</var>)? (Either write a number, or write “infinite recursion”.)</p>
+       <textarea id="codeTextarea" >void dosomething (int n) {	
+  if(n > 0) {
+    System.out.print(n);
+    dosomething(n-1);
+  }
+}</textarea>		
+     What value does dosomething(5) return? (Either write a number, or write "infinite recursion".) </p>
       <br> <textarea rows="1" cols="20" style="resize:none"  id="answerTextarea" ></textarea></p>
       <div class="solution" data-type="custom">
         <div class="guess"> [ "list" ] </div>
         <div class="validator-function">
          answer = parseInt($('#answerTextarea').val());
-         return checkAnswer(answer, k, n );
+         return checkAnswer(answer);
         </div>
       </div>
       <div class="hints">
-      <p> The answer depends on the relationship between k and n.</p>
-      <p> if n is greater than k then the first recursive call will execute. Otherwise, the second one will excuse.</p>
-      <p> In any of the cases, n or k is decremented till it becomes equal to the other one.</p>
-      <p> k is returned in both cases. </p>
+<p>Note that the print statment is executed before reaching the recursive call each time the recursive code executed.</p>
       </div> 
   </div>
 </div>
