--- a/Exercises/RecurTutor/rectFIBfuncxy.html
+++ b/Exercises/RecurTutor/rectFIBfuncxy.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title> Recursion Tracing Exercise:exec Return</title>
+  <title> Recursion Tracing Exercise: func return </title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
-  <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
- 
+  <script src="../../ODSAkhan-exercises/khan-exercise.js"></script> 
+  
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
   <script src="../../lib/codemirror/mode/clike/clike.js"></script>
@@ -16,22 +16,16 @@
     mode:  "text/x-java"
   });
   </script> 
- 
 </head>
  
 <body  data-height="550" data-width="950">
 <script>
-function exec1( n){
-		
-  if (n == 0)
-    return 0;
-  else
-    return n + exec1(n - 1);
-}
 
-function checkAnswer(answer , n) {
+
+function checkAnswer(answer) {
   
-  if ( answer == exec1(n)) {
+  var modelAnswer = "infinite recursion";
+  if ( answer.toLowerCase() == modelAnswer.toLowerCase()) {
     return true;
   } else {
     return false;
@@ -41,31 +35,30 @@ function checkAnswer(answer , n) {
   
 <div class="exercise">
 <div class="vars">
-    <var id="n">randRange(2, 10)</var>
+    <var id="x">randRange(2, 10)</var>
+    <var id="y">randRange(2, 10)</var>
   </div>
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question">     
       Consider the following function:
-      <textarea id="codeTextarea" > 		
-public int exec(int n){	
-  if (n == 0)
-   return 0;	
-  else
-   return n + exec(n - 1);
-}
-      </textarea>		
-     What value does exec(<var>n</var>) return? (Either write a number, or write "infinite recursion".) </p>
+      <textarea id="codeTextarea">int func (int x, int y) {
+  if (y == 1)
+    return x;
+  else	 
+    return x + func(x, y+1);
+}</textarea>		
+     What value does func(<var>x</var> , <var>y</var>) return? (Either write a number, or write "infinite recursion".) </p>
       <br> <textarea rows="1" cols="20" style="resize:none"  id="answerTextarea" ></textarea></p>
       <div class="solution" data-type="custom">
         <div class="guess"> [ "list" ] </div>
         <div class="validator-function">
-         answer = parseInt($('#answerTextarea').val());
-         return checkAnswer(answer ,n );
+         answer = ($('#answerTextarea').val());
+         return checkAnswer(answer);
         </div>
       </div>
       <div class="hints">
-          <p>By tracing this recursive function, you will find that the result is adding n to n-1 to n-2 and so on till reaching to 0.</p>
+      The base case is executed when y reaches zero while the recursive call is incrementing y. Since y is positive, then the base case will never be executed.
       </div> 
   </div>
 </div>
