--- a/Exercises/RecurTutor/rectFIBmystryabinf.html
+++ b/Exercises/RecurTutor/rectFIBmystryabinf.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title> Recursion Tracing Exercise:dosomething Print</title>
+  <title> Recursion Tracing Exercise: Mystery Return</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  
-  
+   
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
   <script src="../../lib/codemirror/mode/clike/clike.js"></script>
@@ -17,16 +16,13 @@
     mode:  "text/x-java"
   });
   </script> 
- 
 </head>
  
 <body  data-height="550" data-width="950">
 <script>
-
-
 function checkAnswer(answer) {
-  
-  if ( answer == 54321) {
+  var modelAnswer = "infinite recursion";
+  if ( answer.toLowerCase() == modelAnswer.toLowerCase()) {
     return true;
   } else {
     return false;
@@ -35,33 +31,28 @@ function checkAnswer(answer) {
 </script>
   
 <div class="exercise">
-<div class="vars">
-    <var id="n">randRange(2, 10)</var>
-  </div>
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question">     
       Consider the following function:
-       <textarea id="codeTextarea" >		
-void dosomething (int n) {	
- if(n>0) {
-  System.out.print(n);
-  dosomething(n-1);
-  }
-}
-      </textarea>		
-     What value does dosomething(5) return? (Either write a number, or write "infinite recursion".) </p>
+      <textarea id="codeTextarea" >int mystery(int a, int b) {
+  if (b == 1)	
+    return a;
+  else
+    return a + mystery(a, b-1);
+}</textarea>		
+     What is the return of calling mystery(2,0)? (Either write a number, or write "infinite recursion".) </p>
       <br> <textarea rows="1" cols="20" style="resize:none"  id="answerTextarea" ></textarea></p>
       <div class="solution" data-type="custom">
         <div class="guess"> [ "list" ] </div>
         <div class="validator-function">
-         answer = parseInt($('#answerTextarea').val());
-         return checkAnswer(answer);
+         answer = ($('#answerTextarea').val());
+         return checkAnswer(answer );
         </div>
       </div>
       <div class="hints">
-<p>Note that the print statment is executed before reaching the recursive call each time the recursive code executed.</p>
-      </div> 
+<p> Initially, b equals  to zero and the recursive function keeps on decrementing B. Do you think it will ever reach to the base case?
+  </p>    </div> 
   </div>
 </div>
 </body>
