--- a/Exercises/RecurTutor/rectFIBmystrynad.html
+++ b/Exercises/RecurTutor/rectFIBmystrynad.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title> Recursion Tracing Exercise: Result Return</title>
+  <title> Recursion Tracing Exercise: Another Mystrey return</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-
+  
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
   <script src="../../lib/codemirror/mode/clike/clike.js"></script>
@@ -20,17 +20,16 @@
  
 <body  data-height="550" data-width="950">
 <script>
-function result(n)
+function mystery( n,  a , d)
 {
-  if(n==1)
-    return 2;
-  else
-    return 2 * result(n-1);	
+	if(n==1)
+	 return a;
+	else
+	 return d + mystery(n-1,a,d);
 }
 
-function checkAnswer(answer , n) {
-  
-  if ( answer == result(n)) {
+function checkAnswer(answer , n, a , d) {
+  if ( answer == mystery(n, a , d)) {
     return true;
   } else {
     return false;
@@ -40,32 +39,31 @@ function checkAnswer(answer , n) {
   
 <div class="exercise">
 <div class="vars">
-    <var id="n">randRange(2, 10)</var>
+    <var id="n">randRange(2, 6)</var>
+    <var id="a">randRange(0, 5)</var>
+    <var id="d">randRange(0, 5)</var>
   </div>
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question">     
       Consider the following function:
-      <textarea id="codeTextarea" > 		
-public int result(int n)
-{
-  if(n==1)
-   return 2;
+      <textarea id="codeTextarea" >public int mystery(int n, int a , int d) {
+  if(n == 1)
+   return a;
   else
-   return 2 * result(n-1);	
-}
-      </textarea>	
-     What value does result(<var>n</var>) return? (Either write a number, or write "infinite recursion".) </p>
+   return d + mystery(n-1,a,d);
+}</textarea>		
+     What value is returned by the call mystery(<var>n</var>,<var>a</var>,<var>d</var>)? (Either write a number, or write "infinite recursion".)</p>
       <br> <textarea rows="1" cols="20" style="resize:none"  id="answerTextarea" ></textarea></p>
       <div class="solution" data-type="custom">
         <div class="guess"> [ "list" ] </div>
         <div class="validator-function">
          answer = parseInt($('#answerTextarea').val());
-         return checkAnswer(answer ,n );
+         return checkAnswer(answer, n, a, d);
         </div>
       </div>
       <div class="hints">
-      <p> By tracing this function till reaching to the base case, 2 is multiplied by itself n times. In other words the result is 2 to the power n.</p>
+      <p> If you trace this function, you will find that d is added to it self n-1 times and in the nth time a is added to the sum.</p>
       </div> 
   </div>
 </div>
