--- a/Exercises/RecurTutor/rectFIBmystrynumb.html
+++ b/Exercises/RecurTutor/rectFIBmystrynumb.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title> Recursion Tracing Exercise: Mystery Return</title>
+  <title> Recursion Tracing Exercise: mystrey return</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-   
+  
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
   <script src="../../lib/codemirror/mode/clike/clike.js"></script>
@@ -20,9 +20,20 @@
  
 <body  data-height="550" data-width="950">
 <script>
-function checkAnswer(answer) {
-  var modelAnswer = "infinite recursion";
-  if ( answer.toLowerCase() == modelAnswer.toLowerCase()) {
+
+function mystery (numbers, index) {
+  if(index==numbers.length-1) {	
+   return numbers[index];	
+  }	
+  else if(numbers[index] > numbers[index+1]) {
+  numbers[index+1] = numbers[index];
+  }
+ return mystery(numbers,index+1);		
+}
+
+function checkAnswer(answer , A) {
+  
+  if ( answer == mystery (A, 0)) {
     return true;
   } else {
     return false;
@@ -31,31 +42,34 @@ function checkAnswer(answer) {
 </script>
   
 <div class="exercise">
+<div class="vars">
+   <var id="A">randRange( 0, 99, 10 )</var>
+  </div>
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question">     
       Consider the following function:
-      <textarea id="codeTextarea" > 		
- int mystery(int a, int b) 
- {
-  if (b==1)	
-   return a;
-  else
-   return a + mystery(a, b-1);
- }
-      </textarea>		
-     What is the return of calling mystery(2,0)? (Either write a number, or write "infinite recursion".) </p>
+      <textarea id="codeTextarea" >int mystery (int[] numbers, int index) {
+  if(index == numbers.length-1) {	
+	 return numbers[index];	
+  }	
+  else if(numbers[index] > numbers[index+1]) {
+     numbers[index+1] = numbers[index];
+  }
+  return mystery(numbers,index+1);		
+}</textarea>		
+     If initially numbers=[ <var> A </var> ] and index=0 What will be the value returned by this mystery function? </p>
       <br> <textarea rows="1" cols="20" style="resize:none"  id="answerTextarea" ></textarea></p>
       <div class="solution" data-type="custom">
         <div class="guess"> [ "list" ] </div>
         <div class="validator-function">
-         answer = ($('#answerTextarea').val());
-         return checkAnswer(answer );
+         answer = parseInt($('#answerTextarea').val());
+         return checkAnswer(answer , A);
         </div>
       </div>
       <div class="hints">
-<p> Initially, b equals  to zero and the recursive function keeps on decrementing B. Do you think it will ever reach to the base case?
-  </p>    </div> 
+      <p>This function is recursively summing the elements of the given array.</p>
+      </div> 
   </div>
 </div>
 </body>
