--- a/Exercises/RecurTutor/rectFIBrsltn.html
+++ b/Exercises/RecurTutor/rectFIBrsltn.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title> Recursion Tracing Exercise: mystrey return</title>
+  <title> Recursion Tracing Exercise: Result Return</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  
+
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
   <script src="../../lib/codemirror/mode/clike/clike.js"></script>
@@ -20,20 +20,17 @@
  
 <body  data-height="550" data-width="950">
 <script>
-
-function mystery (numbers, index) {
-  if(index==numbers.length-1) {	
-   return numbers[index];	
-  }	
-  else if(numbers[index] > numbers[index+1]) {
-  numbers[index+1] = numbers[index];
-  }
- return mystery(numbers,index+1);		
+function result(n)
+{
+  if(n==1)
+    return 2;
+  else
+    return 2 * result(n-1);	
 }
 
-function checkAnswer(answer , A) {
+function checkAnswer(answer , n) {
   
-  if ( answer == mystery (A, 0)) {
+  if ( answer == result(n)) {
     return true;
   } else {
     return false;
@@ -43,34 +40,29 @@ function checkAnswer(answer , A) {
   
 <div class="exercise">
 <div class="vars">
-   <var id="A">randRange( 0, 99, 10 )</var>
+    <var id="n">randRange(2, 10)</var>
   </div>
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question">     
       Consider the following function:
-      <textarea id="codeTextarea" > 		
-int mystery (int[] numbers, int index) {
-   if(index==numbers.length-1) {	
-	  return numbers[index];	
-   }	
-   else if(numbers[index] > numbers[index+1]) {
-      numbers[index+1] = numbers[index];
-   }
-   return mystery(numbers,index+1);		
- }
-      </textarea>		
-     If initially numbers=[ <var> A </var> ] and index=0 What will be the value returned by this mystery function? </p>
+      <textarea id="codeTextarea" >public int result(int n) {
+  if(n == 1)
+    return 2;
+  else
+    return 2 * result(n-1);	
+}</textarea>	
+     What value does result(<var>n</var>) return? (Either write a number, or write "infinite recursion".) </p>
       <br> <textarea rows="1" cols="20" style="resize:none"  id="answerTextarea" ></textarea></p>
       <div class="solution" data-type="custom">
         <div class="guess"> [ "list" ] </div>
         <div class="validator-function">
          answer = parseInt($('#answerTextarea').val());
-         return checkAnswer(answer , A);
+         return checkAnswer(answer ,n );
         </div>
       </div>
       <div class="hints">
-      <p>This function is recursively summing the elements of the given array.</p>
+      <p> By tracing this function till reaching to the base case, 2 is multiplied by itself n times. In other words the result is 2 to the power n.</p>
       </div> 
   </div>
 </div>
