--- a/Exercises/RecurTutor/rectMCQfnctnxn.html
+++ b/Exercises/RecurTutor/rectMCQfnctnxn.html
@@ -27,24 +27,18 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question"> What does the following function do?
-      <textarea id="codeTextarea" >		
-public int function(int [] x , int n)
-{ 
+      <textarea id="codeTextarea" >public int function(int [] x , int n) { 
   int t;	
-  if(n==1)	
-   return x[0];	
-  else
-  {
-   t= function(x, n-1);
-   
-   if(x[n-1] > t)
-    return x[n-1];
-    
-   else
-    return t;
+  if(n == 1)	
+    return x[0];	
+  else {
+    t= function(x, n-1);
+    if(x[n-1] > t)
+     return x[n-1];
+    else
+     return t;
   }
-}	
-      </textarea>
+}</textarea>
       </p>
 
       <div class="solution"><var>"It finds the largest value in x and leaves x unchanged."</var></div>
