--- a/Exercises/RecurTutor/rectMCQsprwrtvrtcl.html
+++ b/Exercises/RecurTutor/rectMCQsprwrtvrtcl.html
@@ -27,24 +27,21 @@
     <div id="problem-type-or-description">
       <p class="question"> 
       Consider the following code:
-      <textarea id="codeTextarea" >	
- void superWriteVertical(int number)
- // Postcondition: The digits of the number have been written,
- // stacked vertically. If number is negative, then a negative sign appears on top.
- {
-  if (number < 0)
-  { System.out.println("-"); 
+      <textarea id="codeTextarea" >// Postcondition: The digits of 
+// the number have been written, stacked vertically. 
+// If number is negative, then a negative sign appears on top.
+void superWriteVertical(int number) {
+  if (number < 0){ 
+    System.out.println("-"); 
 	superWriteVertical(-number);
   }
   else if (number < 10)
 	System.out.println(number);
-  else
-  {    
+  else {    
 	superWriteVertical(number / 10);
 	System.out.println(number % 10);
   }
- }
-	</textarea>
+}</textarea>
       What values of number are directly handled by the base case?
       </p>
 
