--- a/Exercises/RecurTutor/rectMCQsprwrtvrtclcls.html
+++ b/Exercises/RecurTutor/rectMCQsprwrtvrtclcls.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title> Recursion Tracing Exercise: Function Error</title>
+  <title> Recursion Tracing Exercise: Recursive calls</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
- 
+  <script src="../../lib/odsaStyle-min.css"></script>
+
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
   <script src="../../lib/codemirror/mode/clike/clike.js"></script>
@@ -26,26 +27,31 @@
     <div id="problem-type-or-description">
       <p class="question"> 
       Consider the following code::
-      <textarea id="codeTextarea">	
- public void stringRecur(String s)
-{
-  if(s.length()<15)
-    System.out.println(s);
-    
-  stringRecur(s + "*");
- }	</textarea>
-	When will method stringRecur terminates without error?
+      <textarea id="codeTextarea">// Postcondition: The digits of 
+// the  number have been written, stacked vertically. 
+// If number is negative, then a negative sign appears on top.
+void superWriteVertical(int number) {
+  if (number < 0) {
+    System.out.println("-"); 
+    superWriteVertical(-number);
+  }
+  else if (number < 10)
+    System.out.println(number);
+  else {    
+    superWriteVertical(number / 10);
+    System.out.println(number % 10);
+  }
+}</textarea>
+     Which call will result in the most recursive calls?
       </p>
 
-      <div class="solution"> <var>"For no string inputs. It calls itself no matter what the length of s. It will run until the computer runs out of memory."</var></div>
+      <div class="solution"><var>"super_write_vertical(1023);"</var></div>
       <ul class="choices" >
-	<li><var> "Only when the length of the input string is greater than or equal to 15" </var></li>	  	 
-	<li><var>"Only when an empty string is input"</var></li>
-        <li><var>"For all string inputs"</var></li>
-        <li><var>"Only when the length of the input string is less than 15"</var></li>
+	<li><var> "super_write_vertical(-103);" </var></li>	  	 
+	<li><var>"super_write_vertical(0);"</var></li>
+        <li><var>"super_write_vertical(100);"</var></li>
       </ul>
       <div class="hints">
-      <p>Think about the range of the unhandeled cases by the exisiting if statement.</p>
       </div>
     </div>
   </div>
