--- a/Exercises/RecurTutor/rectMCQstrngrecur.html
+++ b/Exercises/RecurTutor/rectMCQstrngrecur.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title> Recursion Tracing Exercise: Recursive function nested calls</title>
+  <title> Recursion Tracing Exercise: Function Error</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  
+ 
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
   <script src="../../lib/codemirror/mode/clike/clike.js"></script>
@@ -16,6 +16,8 @@
     mode:  "text/x-java"
   });
   </script> 
+ 
+
 </head>
 
 <body  data-height="550" data-width="950">
@@ -24,30 +26,23 @@
     <div id="problem-type-or-description">
       <p class="question"> 
       Consider the following code::
-     <textarea id="codeTextarea" >		
- public long foo(long x)
- { 
-  if(x==1 || x==3)
-	return x;
-  else
-	return x * foo(x-1);
-  }
-	</textarea>
-      Assuming no possibility of integer overflow, what will be the value of z after execution of the following statement:
-      <pre>
-      long z = foo(foo(3)+foo(4));
-      </pre>
+      <textarea id="codeTextarea">public void stringRecur(String s) {
+  if(s.length() < 15)
+    System.out.println(s);     
+  stringRecur(s + "*");
+}</textarea>
+	When will method stringRecur terminates without error?
       </p>
 
-      <div class="solution"><var><code>(15!)/(2!)</code></var></div>
+      <div class="solution"> <var>"For no string inputs. It calls itself no matter what the length of s. It will run until the computer runs out of memory."</var></div>
       <ul class="choices" >
-	<li><var> <code>3!+4!</code> </var></li>	  	 
-	<li><var><code>(7!)!</code></var></li>
-        <li><var><code>(3!+4!)!</code></var></li>
-        <li><var><code>15</code></var></li>
+	<li><var> "Only when the length of the input string is greater than or equal to 15" </var></li>	  	 
+	<li><var>"Only when an empty string is input"</var></li>
+        <li><var>"For all string inputs"</var></li>
+        <li><var>"Only when the length of the input string is less than 15"</var></li>
       </ul>
       <div class="hints">
-
+      <p>Think about the range of the unhandeled cases by the exisiting if statement.</p>
       </div>
     </div>
   </div>
