Update graph chapter configs, add graph question

--- a/Exercises/Graph/GvertDegreeFIB.html
+++ b/Exercises/Graph/GvertDegreeFIB.html
@@ -56,7 +56,7 @@ function getAnswer(node){
       <p class="problem">
         <div id="jsav" class="jsavcanvas"></div>
       </p>
-      <p class="question">What it the degree of vertex <var>node</var>?</p>
+      <p class="question">What is the degree of Vertex <var>node</var>?</p>
       <p class="solution" data-type="text"><var>ANS</var></p>
       <div class="hints">
         <p>The degree of a vertex is the number of edges that the vertex touches.</p>
