Added the BinNode ADT lesson to RecurTutor

--- a/Exercises/RecurTutor2/btIncPROG.html
+++ b/Exercises/RecurTutor2/btIncPROG.html
@@ -32,7 +32,8 @@
     <div> <!-- Supresses answer box -->
       <p class="problem" id = "test">Write a recursive function to
       increment by one the value for every node in the binary tree
-      pointed at by "root".</p> 
+      pointed at by "root".  Hint: you should cast the Comparable returned
+      from root.element() to an int in order to be able to manipulate it (e.g. (int)root.element()) </p> 
 
     <textarea  id="codeTextarea">
 void btInc(BinNode root) {
